# cpp_template

./: .clangd  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: CMakeToolchain.cmake  Dependencies.cmake  Options.cmake  ToolchainArm64Linux.cmake  ToolchainArmLinuxEabihf.cmake  ToolchainArmNoneEabi.cmake
docker/: README.md  ubuntu-cpp-toolchain.Dockerfile
include/atomic/: SpscQueue.hpp  SpscQueue.inl  spsc_ring.hpp
include/dsp/: Benchmark.hpp  Filters.hpp
include/io/: file.hpp  file_linux.hpp  file_windows.hpp
include/net/: UdpSocket.hpp
include/process/: Popen.hpp
scripts/: ci-local.sh  fetch-tools.sh  manifest-helper.py  setup-machine.bat  setup-machine.ps1  setup-machine.sh  test_github.sh  test_gitlab.sh
src/: main.cpp
src/dsp/: Benchmark.cpp  Filters.cpp  PerfRunner.cpp
src/net/: UdpSocket.cpp
src/process/: Popen.cpp
tests/: CMakeLists.txt  args_test.cpp  thread_test.cpp
tests/atomic/: CMakeLists.txt  atomic_test.cpp
tests/dsp/: CMakeLists.txt  FiltersTest.cpp  PerformanceTest.cpp
tests/io/: CMakeLists.txt  file_test.cpp  pcap_test.cpp
tests/net/: CMakeLists.txt  udp_test.cpp
tests/process/: CMakeLists.txt  popen_test.cpp
tools/: fetch.py  fetch_tools.py  manifest.yaml
